some formatting and styling complete. Images not showing correctly on details page.

--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,36 @@
 body {
   font-family: 'Roboto', sans-serif;
+  background: url("background-3.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 
+h1 {
+  font-size: 65px;
+}
 
-
+.flex-nav {
+  justify-content: space-around;
+}
 .flex-nav ul{
-  border: 1px solid black;
-  list-style:none;
-  margin:0;
-  padding:0;
   display: flex;
+  /*border: 1px solid black;*/
+  list-style: none;
+  margin: auto;
+  padding-left: 0px;
+  justify-content: space-between;
 
 }
 
 .flex-nav li{
+  display: flex;
   flex: 1;
   border: 1px solid black;
-
+  margin: 2px;
+  background-color: #B4D8E7;
+  justify-content: center;
+  align-items: center;
+  padding:10px;
+  border-radius: 8px;
 }
 
 .wrapper {
@@ -49,24 +63,33 @@ body {
   display: flex;
   border-style: solid;
   border-width: 5px;
+  border-color: #708090;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  border-radius: 20px;
+  background-color: #FFB347;
 }
 
 
 .flex-content .content-container {
   display: flex;
-  border-style: solid;
+  border-style: none;
   border-width: 5px;
   flex-direction: row;
 }
 
 .flex-content .content-area-container {
   display: flex;
-  border-style: solid;
-  border-width: 5px;
-  border-color: blue;
+  border-style: none;
+  /*border-width: 5px;
+  border-color: blue;*/
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #B4D8E7;
+  opacity: 0.8;
+  border-radius: 20px;
+  padding: 10px;
 
 }
 
@@ -87,18 +110,19 @@ body {
 
 }
 
-.flex-content .content-img-box{
+.content-img-box{
   display: flex;
-  border-style: solid;
-  max-width: auto;
+  border-style: none;
+  /*max-width: auto;*/
   max-height: 400px;
   border-color: pink;
   flex-direction: row;
+  opacity: none;
 }
 
 .flex-content .container-boxes{
   display: flex;
-  border-style: solid;
+  /*border-style: solid;*/
   flex-direction: column;
   margin: 0px;
   flex: 1;
@@ -111,6 +135,9 @@ body {
   border-style: solid;
   flex-direction: column;
   justify-content: center;
+  border-color: #ffb347;
+  border-radius: 15px;
+
 }
 .flex-content .content-area-container .entry-area {
   display: flex;
